// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> tests snapshot test 1`] = `
<div>
  <div
    class="accordion"
  >
    <div
      class="panel"
      data-open="false"
      data-testid="panel-1-panel"
    >
      <div
        class="summary"
        data-testid="panel-1-summary"
      >
        <div
          class="label"
        >
          Panel 1
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
    <div
      class="panel"
      data-open="false"
      data-testid="panel-2-panel"
    >
      <div
        class="summary"
        data-testid="panel-2-summary"
      >
        <div
          class="label"
        >
          Panel 2
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> tests toggle works between panels: Panel 1 open 1`] = `
<div>
  <div
    class="accordion"
  >
    <div
      class="panel"
      data-open="true"
      data-testid="panel-1-panel"
    >
      <div
        class="summary"
        data-testid="panel-1-summary"
      >
        <div
          class="label"
        >
          Panel 1
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="details"
            data-testid="panel-1-details"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus error, id recusandae doloribus earum inventore, soluta fugit quidem nulla labore optio incidunt quis facilis. Rem illum unde tempore tempora.
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel"
      data-open="false"
      data-testid="panel-2-panel"
    >
      <div
        class="summary"
        data-testid="panel-2-summary"
      >
        <div
          class="label"
        >
          Panel 2
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> tests toggle works between panels: Panel 2 open 1`] = `
<div>
  <div
    class="accordion"
  >
    <div
      class="panel"
      data-open="false"
      data-testid="panel-1-panel"
    >
      <div
        class="summary"
        data-testid="panel-1-summary"
      >
        <div
          class="label"
        >
          Panel 1
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
        style="height: auto;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0);"
        >
          <div
            class="details"
            data-testid="panel-1-details"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus error, id recusandae doloribus earum inventore, soluta fugit quidem nulla labore optio incidunt quis facilis. Rem illum unde tempore tempora.
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel"
      data-open="true"
      data-testid="panel-2-panel"
    >
      <div
        class="summary"
        data-testid="panel-2-summary"
      >
        <div
          class="label"
        >
          Panel 2
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
        style="height: 0px;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0);"
        >
          <div
            class="details"
            data-testid="panel-2-details"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus error, id recusandae doloribus earum inventore, soluta fugit quidem nulla labore optio incidunt quis facilis. Rem illum unde tempore tempora.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> tests toggle works for same panel: Panel 1 closed 1`] = `
<div>
  <div
    class="accordion"
  >
    <div
      class="panel"
      data-open="false"
      data-testid="panel-1-panel"
    >
      <div
        class="summary"
        data-testid="panel-1-summary"
      >
        <div
          class="label"
        >
          Panel 1
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
        style="height: auto;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0);"
        >
          <div
            class="details"
            data-testid="panel-1-details"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus error, id recusandae doloribus earum inventore, soluta fugit quidem nulla labore optio incidunt quis facilis. Rem illum unde tempore tempora.
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel"
      data-open="false"
      data-testid="panel-2-panel"
    >
      <div
        class="summary"
        data-testid="panel-2-summary"
      >
        <div
          class="label"
        >
          Panel 2
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> tests toggle works for same panel: Panel 1 open 1`] = `
<div>
  <div
    class="accordion"
  >
    <div
      class="panel"
      data-open="true"
      data-testid="panel-1-panel"
    >
      <div
        class="summary"
        data-testid="panel-1-summary"
      >
        <div
          class="label"
        >
          Panel 1
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="details"
            data-testid="panel-1-details"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus error, id recusandae doloribus earum inventore, soluta fugit quidem nulla labore optio incidunt quis facilis. Rem illum unde tempore tempora.
          </div>
        </div>
      </div>
    </div>
    <div
      class="panel"
      data-open="false"
      data-testid="panel-2-panel"
    >
      <div
        class="summary"
        data-testid="panel-2-summary"
      >
        <div
          class="label"
        >
          Panel 2
        </div>
        <div
          class="chevron"
        />
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;
